testsuite/tests/grammar/invalid_user_field/test.out
test.py:15: error: UserField on nodes must be private
Done
